@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Correctly save names of mailbox created from the rule form (Bug #14150).
 * [mjr] Fix invalid URLs in certain forms when cookies are disabled (Bug #14148).
  </notes>
  <contents>
@@ -1607,6 +1608,7 @@
    <date>2015-10-20</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [jan] Correctly save names of mailbox created from the rule form (Bug #14150).
 * [mjr] Fix invalid URLs in certain forms when cookies are disabled (Bug #14148).
    </notes>
   </release>
