@@ -2,6 +2,7 @@
 v3.2.8-git
 ----------
 
+[jan] Correctly save names of mailbox created from the rule form (Bug #14150).
 [mjr] Fix invalid URLs in certain forms when cookies are disabled (Bug #14148).
 
 
